like button n route

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,25 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Posts</title>
+    <title>My Flask Blog</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Blog Posts</h1>
-    <ul>
-        {% for post in posts %}
-        <li>
-            <h2>{{ post.title }}</h2>
-            <p><strong>Author:</strong> {{ post.author }}</p>
-            <p>{{ post.content }}</p>
-            <form action="/delete/{{ loop.index0 }}" method="POST" style="display:inline;">
-                <button type="submit">Delete</button>
-            </form>
-            <form action="/update/{{ loop.index0 }}" method="GET" style="display:inline;">
-                <button type="submit">Update</button>
-            </form>
-        </li>
-        {% endfor %}
-    </ul>
-    <a href="/add">Add a New Post</a>
+    <h1>Welcome to My Flask Blog!</h1>
+    {% for post in posts %}
+    <div class="post">
+        <h2>{{ post['title'] }}</h2>
+        <p><em>Written by {{ post['author'] }}</em></p>
+        <p>{{ post['content'] }}</p>
+        <p>Likes: <span id="likes-{{ post['id'] }}">{{ post.get('likes', 0) }}</span></p>
+        <form action="{{ url_for('like', id=post['id']) }}" method="POST">
+            <button type="submit">Like</button>
+        </form>
+    </div>
+    {% endfor %}
 </body>
 </html>
