--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Flask Blog</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <title>Blog</title>
 </head>
 <body>
-    <h1>Welcome to My Flask Blog!</h1>
-    {% for post in posts %}
-    <div class="post">
-        <h2>{{ post['title'] }}</h2>
-        <p><em>Written by {{ post['author'] }}</em></p>
-        <p>{{ post['content'] }}</p>
-        <p>Likes: <span id="likes-{{ post['id'] }}">{{ post.get('likes', 0) }}</span></p>
-        <form action="{{ url_for('like', id=post['id']) }}" method="POST">
-            <button type="submit">Like</button>
-        </form>
-    </div>
-    {% endfor %}
+    <h1>Blog Posts</h1>
+    <ul>
+        {% for post in posts %}
+        <li>
+            <h2>{{ post.title }}</h2>
+            <p>{{ post.content }}</p>
+            <p><em>by {{ post.author }}</em></p>
+            <a href="{{ url_for('delete', post_id=post.id) }}">Delete</a>
+            <a href="{{ url_for('update', post_id=post.id) }}">Update</a>
+        </li>
+        {% endfor %}
+    </ul>
+    <a href="{{ url_for('add') }}">Add New Post</a>
 </body>
 </html>
