--- a/templates/update.html
+++ b/templates/update.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Blog Post</title>
+    <title>Update Post</title>
 </head>
 <body>
     <h1>Update Blog Post</h1>
-    <form action="/update/{{ post_id }}" method="POST">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" value="{{ post.title }}" required>
-        <br>
+    <form action="{{ url_for('update', post_id=post['id']) }}" method="POST">
+        <label for="title">Title:</label><br>
+        <input type="text" id="title" name="title" value="{{ post['title'] }}" required><br>
 
-        <label for="author">Author:</label>
-        <input type="text" id="author" name="author" value="{{ post.author }}" required>
-        <br>
+        <label for="author">Author:</label><br>
+        <input type="text" id="author" name="author" value="{{ post['author'] }}" required><br>
 
-        <label for="content">Content:</label>
-        <textarea id="content" name="content" rows="10" cols="30" required>{{ post.content }}</textarea>
-        <br>
+        <label for="content">Content</label>
+        <textarea id="content" name="content" required>{{ post.content }}</textarea>
 
         <button type="submit">Update Post</button>
     </form>
+    <a href="{{ url_for('index') }}">Cancel</a>
 </body>
 </html>
