--- a/templates/index.html
+++ b/templates/index.html
@@ -2,24 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Blog Posts</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>Blog Posts</h1>
-    <div class="posts">
-        {% for post in posts %}
-        <div class="post">
-            <h2>{{ post['title'] }}</h2>
-            <p><strong>Author:</strong> {{ post['author'] }}</p>
-            <p>{{ post['content'] }}</p>
-            <form action="{{ url_for('delete', post_id=post['id']) }}" method="post" style="display:inline;">
-                <input type="submit" value="Delete">
-            </form>
-            <a href="{{ url_for('update', post_id=post['id']) }}">Update</a>
-        </div>
-        {% endfor %}
-    </div>
     <a href="{{ url_for('add') }}">Add New Post</a>
+    <ul>
+        {% for post in posts %}
+            <li>
+                <h2>{{ post['title'] }}</h2>
+                <p>Author: {{ post['author'] }}</p>
+                <p>{{ post['content'] }}</p>
+                <p>Likes: {{ post['likes'] }}</p>
+                <form action="{{ url_for('like', post_id=post['id']) }}" method="POST" style="display: inline;">
+                    <button type="submit">Like</button>
+                </form>
+                <a href="{{ url_for('update', post_id=post['id']) }}">Update</a>
+                <form action="{{ url_for('delete', post_id=post['id']) }}" method="POST" style="display: inline;">
+                    <button type="submit">Delete</button>
+                </form>
+            </li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
