--- a/templates/update.html
+++ b/templates/update.html
@@ -2,22 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Blog Post</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>Update Blog Post</h1>
-    <form action="{{ url_for('update', post_id=post['id']) }}" method="POST">
+
+    <form action="/update/{{ post['id'] }}" method="POST">
         <label for="author">Author:</label><br>
-        <input type="text" id="author" name="author" value="{{ post['author'] }}"><br><br>
-
+        <input type="text" id="author" name="author" value="{{ post['author'] }}"><br>
         <label for="title">Title:</label><br>
-        <input type="text" id="title" name="title" value="{{ post['title'] }}"><br><br>
-
+        <input type="text" id="title" name="title" value="{{ post['title'] }}"><br>
         <label for="content">Content:</label><br>
-        <textarea id="content" name="content" rows="4" cols="50">{{ post['content'] }}</textarea><br><br>
-
+        <textarea id="content" name="content">{{ post['content'] }}</textarea><br>
         <input type="submit" value="Update">
     </form>
+    <h4>Status: {{ message }}</h4>
 </body>
 </html>
